<resources>
    <string name="app_name">ChatApp</string>
    <string name="register_text">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="bio">Bio</string>
    <string name="continue_text">Continue</string>
</resources>